--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -1,5 +1,74 @@
 body
-  padding: 50px
+  padding 0
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif
 a
-  color: #00B7FF
+  color #47ac39
+
+h1
+  color #47ac39
+  font-size 55px
+  text-shadow 1px 1px 0 #333
+  a
+    color inherit
+    text-decoration none
+
+h2
+  color #666
+
+#body,#footer
+  width 600px
+  margin-left auto
+  margin-right auto
+  margin-top -17px
+  text-align center
+  color #444
+  letter-spacing 1px
+  input, textarea
+    width 200px
+    border 1px solid #bbb
+    border-radius 3px
+    color #999
+    text-shadow 1px 1px 0 white
+    margin 1px
+  input:hover
+    color #000
+  textarea
+    width 400px
+    text-shadow none
+  .content
+    margin-top -15px
+    text-align left
+    margin-left 100px
+    width 400px
+    .post
+      width 99%
+      left 0px
+      display block
+      clear left
+      .user
+        width 50px
+        background #F9FEDA
+        color #47ac39
+        font-weight bold
+        text-align center
+        float left
+        border 1px solid #999
+        border-radius 3px
+        margin-top 11px
+      .post-post
+        padding 10px
+        width 320px
+        max-width 320px
+        overflow hidden
+        float left
+        margin-left 3px
+        color #47ac39
+        margin-bottom 5px
+    .you
+      .user
+        background #E3FDD8
+        color #555
+      .post-post
+        color #555
+  .controls
+    margin-top 50px
