--- a/views/layout.jade
+++ b/views/layout.jade
@@ -5,7 +5,8 @@ html
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
-    != body
+    #body!= body
+    br
     br
     #footer
       | By
