--- a/views/chat.jade
+++ b/views/chat.jade
@@ -14,6 +14,8 @@ br
   br
   input#send(type="button", value="Send")
   input#load(type="button", value="Load")
+  br
+  input#auto(type="button", value="Auto Load?")
 
 script
   var USER = {
