--- a/views/join.jade
+++ b/views/join.jade
@@ -1,5 +1,5 @@
 h1 TALK
-b JOIN #{chat.name}
+h2 JOIN #{chat.name}
 form#join(action="/join", method="post")
   input(type="hidden", name="name", value=chat.name)
   b Password
