--- a/views/chat.jade
+++ b/views/chat.jade
@@ -15,7 +15,9 @@ br
   input#send(type="button", value="Send")
   input#load(type="button", value="Load")
   br
-  input#auto(type="button", value="Auto Load?")
+  input#auto(type="button", value="Auto Load")
+  br
+  input#remo(type="button", value="Remove this chat")
 
 script
   var USER = {
