--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -55,6 +55,7 @@ h2
         border 1px solid #999
         border-radius 3px
         margin-top 11px
+        overflow hidden
       .post-post
         padding 10px
         width 320px
