--- a/views/chat.jade
+++ b/views/chat.jade
@@ -6,18 +6,23 @@ h1
   - for (var i = len > 10 ? len-5 : 0; i < len; i++)
     - var post = chat.posts[i]
     div.post(name=i+1,class=post.user.id == user.id ? "you" : "")
-      .user(data-id=post.user.id, data-name=post.user.name)= post.user.name
+      .user(data-id=post.user.id, data-name=post.user.name)
+        = post.user.name + " "
+        small.date= post.date.toString().split(' ')[4]
       .post-post(data-date= post.date)= post.post
 br
 .controls
   textarea#new_post
   br
+  br
   input#send(type="button", value="Send")
   input#load(type="button", value="Load")
   br
+  br
   input#auto(type="button", value="Auto Load")
   br
-  input#remo(type="button", value="Remove this chat")
+  br
+  input#remo(type="button", value="Remove Chat")
 
 script
   var USER = {
