--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -92,7 +92,7 @@ h2
       .user
         background #222
         border-color #222
-        color #ddd
+        color #ddd !important
       .post-post
         border-color #222
         color #ddd
