--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -81,23 +81,21 @@ h2 {
   width: 400px;
 }
 #body .content .post .user,
-#footer .content .post .user,
-#body .content .you .user,
-#footer .content .you .user {
+#footer .content .post .user {
   width: 380px;
+  background: #444;
+  color: #47ac39;
   font-weight: bold;
   text-align: center;
   border: 1px solid #444;
-  border-radius: 3px 3px 0 0;
+  border-radius: 5px 5px 0 0;
   margin-top: 11px;
   overflow: hidden;
   text-align: left;
   padding: 3px 10px;
 }
 #body .content .post .user .date,
-#footer .content .post .user .date,
-#body .content .you .user .date,
-#footer .content .you .user .date {
+#footer .content .post .user .date {
   float: right;
   margin-top: 3px;
   font-weight: normal;
@@ -105,24 +103,14 @@ h2 {
   opacity: 0.5;
 }
 #body .content .post .post-post,
-#footer .content .post .post-post,
-#body .content .you .post-post,
-#footer .content .you .post-post {
+#footer .content .post .post-post {
+  background: #333;
   padding: 10px;
   width: 380px;
   border: 1px solid #444;
-  border-radius: 0 0 3px 3px;
+  border-radius: 0 0 5px 5px;
   border-top: 0;
   overflow: hidden;
-}
-#body .content .post .user,
-#footer .content .post .user {
-  background: #444;
-  color: #47ac39;
-}
-#body .content .post .post-post,
-#footer .content .post .post-post {
-  background: #333;
   color: #47ac39;
 }
 #body .content .you .user,
