--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -37,6 +37,10 @@ h2 {
   width: 200px;
   border: 1px solid #444;
   border-top: 1px solid #555;
+  -webkit-border-radius: 8px;
+  -moz-border-radius: 8px;
+  -o-border-radius: 8px;
+  -ms-border-radius: 8px;
   border-radius: 8px;
   color: #ddd;
   margin: 1px;
@@ -63,6 +67,10 @@ h2 {
   line-height: 20px;
   font-size: 14px;
   letter-spacing: 2px;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  -o-border-radius: 5px;
+  -ms-border-radius: 5px;
   border-radius: 5px;
 }
 #body input[type="button"]:hover,
@@ -88,6 +96,10 @@ h2 {
   font-weight: bold;
   text-align: center;
   border: 1px solid #444;
+  -webkit-border-radius: 5px 5px 0 0;
+  -moz-border-radius: 5px 5px 0 0;
+  -o-border-radius: 5px 5px 0 0;
+  -ms-border-radius: 5px 5px 0 0;
   border-radius: 5px 5px 0 0;
   margin-top: 11px;
   overflow: hidden;
@@ -108,6 +120,10 @@ h2 {
   padding: 10px;
   width: 380px;
   border: 1px solid #444;
+  -webkit-border-radius: 0 0 5px 5px;
+  -moz-border-radius: 0 0 5px 5px;
+  -o-border-radius: 0 0 5px 5px;
+  -ms-border-radius: 0 0 5px 5px;
   border-radius: 0 0 5px 5px;
   border-top: 0;
   overflow: hidden;
