--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -44,6 +44,9 @@ h2
     margin 1px
   textarea
     width 400px
+    min-width 400px
+    max-width 400px
+    min-height 50px
     text-shadow none
   input[type="button"], input[type="submit"]
     color #222
@@ -119,6 +122,9 @@ h2
           padding 10px
         pre:hover
           overflow-x scroll
+        img
+          max-width 100px
+          max-height 100px
     .you
       .user
         background #222
