--- a/views/join.jade
+++ b/views/join.jade
@@ -1,4 +1,5 @@
-h1 TALK
+h1
+  a(href="/") TALK
 h2 JOIN #{chat.name}
 form#join(action="/join", method="post")
   input(type="hidden", name="name", value=chat.name)
