--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -135,3 +135,11 @@ h2
         color #ddd
   .controls
     margin-top 0px
+  #error
+    background #2D2D2D
+    color #444744
+    font-weight bold
+    line-height 30px
+    width 100px
+    margin-left 250px
+    border-radius 8px
