--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -40,7 +40,7 @@ h2
     border 1px solid #444
     border-top 1px solid #555
     border-radius 8px
-    color #ddd
+    color #999
     margin 1px
   textarea
     width 400px
@@ -67,6 +67,11 @@ h2
     background #444744
     border 1px solid #555
     border-top 1px solid #666
+  .description
+    p
+      width 200px
+      margin-left auto
+      margin-right auto
   .content
     margin-top -15px
     text-align left
