--- a/views/index.jade
+++ b/views/index.jade
@@ -18,7 +18,7 @@ form#create(action="/new", method="post")
   br
   b talk.nodester.com/
   br
-  input(type="textbox", name="name", placeholder="chat_name")
+  input(type="textbox", name="name", placeholder="Chat Name")
   br
   br
   b Password
