--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -96,45 +96,53 @@ h2 {
   text-align: left;
   margin-left: 100px;
   width: 400px;
+  border: 1px solid #222;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  -o-border-radius: 5px;
+  -ms-border-radius: 5px;
+  border-radius: 5px;
 }
-#body .content .post .user,
-#footer .content .post .user {
-  width: 380px;
-  background: #444;
-  color: #47ac39;
-  font-weight: bold;
-  text-align: center;
-  border: 1px solid #444;
+#body .content .post:first-child .user,
+#footer .content .post:first-child .user {
   -webkit-border-radius: 5px 5px 0 0;
   -moz-border-radius: 5px 5px 0 0;
   -o-border-radius: 5px 5px 0 0;
   -ms-border-radius: 5px 5px 0 0;
   border-radius: 5px 5px 0 0;
-  margin-top: 11px;
-  overflow: hidden;
-  text-align: left;
-  padding: 3px 10px;
+  border-top: 0px;
 }
-#body .content .post .user .date,
-#footer .content .post .user .date {
-  float: right;
-  margin-top: 3px;
-  font-weight: normal;
-  font-size: 11px;
-  opacity: 0.5;
-}
-#body .content .post .post-post,
-#footer .content .post .post-post {
-  background: #333;
-  padding: 10px;
-  width: 380px;
-  border: 1px solid #444;
+#body .content .post:last-child .post-post,
+#footer .content .post:last-child .post-post {
   -webkit-border-radius: 0 0 5px 5px;
   -moz-border-radius: 0 0 5px 5px;
   -o-border-radius: 0 0 5px 5px;
   -ms-border-radius: 0 0 5px 5px;
   border-radius: 0 0 5px 5px;
-  border-top: 0;
+}
+#body .content .post .user,
+#footer .content .post .user {
+  width: 380px;
+  background: #383838;
+  color: #326326;
+  font-weight: bold;
+  text-align: center;
+  overflow: hidden;
+  text-align: left;
+  padding: 1px 10px;
+  border-top: 1px solid #222;
+  font-size: 10px;
+}
+#body .content .post .user .date,
+#footer .content .post .user .date {
+  float: right;
+  margin-top: 1px;
+}
+#body .content .post .post-post,
+#footer .content .post .post-post {
+  background: #333;
+  padding: 6px 10px 12px 10px;
+  width: 380px;
   overflow: hidden;
   color: #47ac39;
 }
@@ -179,13 +187,11 @@ h2 {
 }
 #body .content .you .user,
 #footer .content .you .user {
-  background: #222;
-  border-color: #222;
-  color: #ddd;
+  background: #2d2d2d;
+  color: #666;
 }
 #body .content .you .post-post,
 #footer .content .you .post-post {
-  border-color: #222;
   color: #ddd;
 }
 #body .controls,
