--- a/views/chat.jade
+++ b/views/chat.jade
@@ -1,9 +1,12 @@
 h1
   a(href="/") TALK:
   =" "+chat.name
-.content
+#content
+  .post.you
+    .user
+      small Nothing here yet
 p#error
-.controls
+#controls
   textarea#new_post
   br
   br
