--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -90,8 +90,8 @@ h2 {
   margin-left: auto;
   margin-right: auto;
 }
-#body .content,
-#footer .content {
+#body #content,
+#footer #content {
   margin-top: -15px;
   text-align: left;
   margin-left: 100px;
@@ -103,8 +103,8 @@ h2 {
   -ms-border-radius: 5px;
   border-radius: 5px;
 }
-#body .content .post:first-child .user,
-#footer .content .post:first-child .user {
+#body #content .post:first-child .user,
+#footer #content .post:first-child .user {
   -webkit-border-radius: 5px 5px 0 0;
   -moz-border-radius: 5px 5px 0 0;
   -o-border-radius: 5px 5px 0 0;
@@ -112,16 +112,16 @@ h2 {
   border-radius: 5px 5px 0 0;
   border-top: 0px;
 }
-#body .content .post:last-child .post-post,
-#footer .content .post:last-child .post-post {
+#body #content .post:last-child .post-post,
+#footer #content .post:last-child .post-post {
   -webkit-border-radius: 0 0 5px 5px;
   -moz-border-radius: 0 0 5px 5px;
   -o-border-radius: 0 0 5px 5px;
   -ms-border-radius: 0 0 5px 5px;
   border-radius: 0 0 5px 5px;
 }
-#body .content .post .user,
-#footer .content .post .user {
+#body #content .post .user,
+#footer #content .post .user {
   width: 380px;
   background: #383838;
   color: #326326;
@@ -133,25 +133,25 @@ h2 {
   border-top: 1px solid #222;
   font-size: 10px;
 }
-#body .content .post .user .date,
-#footer .content .post .user .date {
+#body #content .post .user .date,
+#footer #content .post .user .date {
   float: right;
   margin-top: 1px;
 }
-#body .content .post .post-post,
-#footer .content .post .post-post {
+#body #content .post .post-post,
+#footer #content .post .post-post {
   background: #333;
   padding: 6px 10px 12px 10px;
   width: 380px;
   overflow: hidden;
   color: #47ac39;
 }
-#body .content .post .post-post p,
-#footer .content .post .post-post p {
+#body #content .post .post-post p,
+#footer #content .post .post-post p {
   margin: 0;
 }
-#body .content .post .post-post blockquote,
-#footer .content .post .post-post blockquote {
+#body #content .post .post-post blockquote,
+#footer #content .post .post-post blockquote {
   padding: 10px;
   margin-left: -10px;
   border-left: 1px solid #36642f;
@@ -159,43 +159,43 @@ h2 {
   background: #304030;
   width: 380px;
 }
-#body .content .post .post-post li,
-#footer .content .post .post-post li {
+#body #content .post .post-post li,
+#footer #content .post .post-post li {
   margin-left: -20px;
 }
-#body .content .post .post-post pre code,
-#footer .content .post .post-post pre code {
+#body #content .post .post-post pre code,
+#footer #content .post .post-post pre code {
   color: #999;
   font-size: 11px;
 }
-#body .content .post .post-post pre,
-#footer .content .post .post-post pre {
+#body #content .post .post-post pre,
+#footer #content .post .post-post pre {
   border-left: 1px solid #111;
   background: #2d2d2d;
   width: 380px;
   margin-left: -10px;
   padding: 10px;
 }
-#body .content .post .post-post pre:hover,
-#footer .content .post .post-post pre:hover {
+#body #content .post .post-post pre:hover,
+#footer #content .post .post-post pre:hover {
   overflow-x: scroll;
 }
-#body .content .post .post-post img,
-#footer .content .post .post-post img {
+#body #content .post .post-post img,
+#footer #content .post .post-post img {
   max-width: 100px;
   max-height: 100px;
 }
-#body .content .you .user,
-#footer .content .you .user {
+#body #content .you .user,
+#footer #content .you .user {
   background: #2d2d2d;
   color: #666;
 }
-#body .content .you .post-post,
-#footer .content .you .post-post {
+#body #content .you .post-post,
+#footer #content .you .post-post {
   color: #ddd;
 }
-#body .controls,
-#footer .controls {
+#body #controls,
+#footer #controls {
   margin-top: 0px;
 }
 #body #error,
