--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -72,7 +72,7 @@ h2
       width 200px
       margin-left auto
       margin-right auto
-  .content
+  #content
     margin-top -15px
     text-align left
     margin-left 100px
@@ -136,7 +136,7 @@ h2
         color #666
       .post-post
         color #ddd
-  .controls
+  #controls
     margin-top 0px
   #error
     background #2D2D2D
