--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -13,6 +13,8 @@ body
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif
 a
   color #47ac39
+a:hover
+  color #326326
 
 h1
   color #47ac39
