--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -140,6 +140,9 @@ h2
         color #ddd
   #controls
     margin-top 0px
+    small
+      color #666
+      font-size 10px
   #error
     background #2D2D2D
     color #444744
