--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,8 +1,13 @@
 !!!
 html
   head
+    meta(charset='utf-8')
+    meta(name='description', content='TALK is a simple FOSS web system for creating private chats.')
+    meta(name='keywords', content='TALK FOSS node javascript nodester private chats')
+    meta(name='author', content='Daniel Rodriguez, http://sadasant.com/')
     - var title = title || 'talk'
-    title= title
+    - var chat = chat || {}
+    title= title + (chat.name ? ": "+chat.name : "")
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
     #body!= body
