little fix and shortcut icon

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -5,6 +5,7 @@ html
     meta(name='description', content='TALK is a simple FOSS web system for creating private chats.')
     meta(name='keywords', content='TALK FOSS node javascript nodester private chats')
     meta(name='author', content='Daniel Rodriguez, http://sadasant.com/')
+    link(rel="shortcut icon", href="/img/TALK.ico")
     - var title = title || 'talk'
     - var chat = chat || {}
     title= title + (chat.name ? ": "+chat.name : "")
