--- a/views/index.jade
+++ b/views/index.jade
@@ -5,7 +5,7 @@ h1
     b="TALK "
     =" is a simple "
     a(href="https://github.com/sadasant/TALK")="FOSS"
-    |  web system for creating private chats.
+    |  node.js app for creating private chats.
 h2 CREATE
 form#create(action="/new", method="post")
   b User Name
