--- a/views/layout.jade
+++ b/views/layout.jade
@@ -2,11 +2,11 @@
 html
   head
     meta(charset='utf-8')
-    meta(name='description', content='TALK is a simple FOSS web system for creating private chats.')
+    meta(name='description', content='TALK is a simple FOSS node.js app for creating private chats.')
     meta(name='keywords', content='TALK FOSS node javascript nodester private chats')
     meta(name='author', content='Daniel Rodriguez, http://sadasant.com/')
     link(rel="shortcut icon", href="/img/TALK.ico")
-    - var title = title || 'talk'
+    - var title = title || 'TALK'
     - var chat = chat || {}
     title= title + (chat.name ? ": "+chat.name : "")
     link(rel='stylesheet', href='/stylesheets/style.css')
