--- a/views/layout.jade
+++ b/views/layout.jade
@@ -3,7 +3,7 @@ html
   head
     meta(charset='utf-8')
     meta(name='description', content='TALK is a simple FOSS node.js app for creating private chats.')
-    meta(name='keywords', content='TALK FOSS node javascript nodester private chats')
+    meta(name='keywords', content='TALK FOSS node.js app javascript nodester private chat')
     meta(name='author', content='Daniel Rodriguez, http://sadasant.com/')
     link(rel="shortcut icon", href="/img/TALK.ico")
     - var title = title || 'TALK'
