disclaimer for removed chats

--- a/views/index.jade
+++ b/views/index.jade
@@ -6,6 +6,11 @@ h1
     =" is a simple "
     a(href="https://github.com/sadasant/TALK")="FOSS"
     |  node.js app for creating private chats.
+    br
+    br
+    | All the chats are flushed once a day and after every
+    a(href="https://github.com/sadasant/TALK/commits/master/") update
+    |.
 h2 CREATE
 form#create(action="/new", method="post")
   b User Name
