--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -3,14 +3,14 @@ vendors = webkit moz o ms official
 border-radius()
   for v in vendors
     if v == official
-      border-radius: arguments
+      border-radius arguments
     else
-      -{v}-border-radius: arguments
+      -{v}-border-radius arguments
 
 body
   background #333
   padding 0
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif
+  font 14px "Lucida Grande", Helvetica, Arial, sans-serif
 a
   color #47ac39
 a:hover
@@ -23,10 +23,16 @@ h1
   a
     color inherit
     text-decoration none
+  margin-bottom 20px
 
 h2
   color #666
   text-shadow 1px 1px 0 #000
+
+.left
+  float left
+.right
+  float right
 
 #body,#footer
   margin-left auto
@@ -55,9 +61,8 @@ h2
     width auto
     border 1px solid #444
     border-top 1px solid #555
-    border-radius 8px
+    border-radius 5px
     color #999
-    margin 1px
   input[type="button"]:hover, input[type="submit"]:hover
     background #444744
     border 1px solid #555
@@ -68,10 +73,10 @@ h2
       margin-left auto
       margin-right auto
   #content
-    margin-top -15px
     text-align left
     margin-left auto
     margin-right auto
+    margin-bottom 25px
     width auto
     max-width 400px
     border 1px solid #222
@@ -134,24 +139,37 @@ h2
         color #666
       .post-post
         color #ddd
-  #controls
+  .controls
     margin-top 0px
-    max-width: 400px
+    max-width 404px
     margin-left auto
     margin-right auto
-    small
-      color #666
-      font-size 10px
+    input
+      min-width auto
+      width 33%
+      margin 0
+      margin-top 3px
+      margin-bottom 5px
+    #send
+      border-radius 5px 0 0 5px
+      border-right 0
+    #load
+      border-radius 0
+      border-right 0
+    #auto
+      border-radius 0 5px 5px 0
+    #load:hover, #auto:hover
+      border-left-color #444
     textarea
-      width auto
       width 98%
       min-height 50px
       text-shadow none
   #error
-    background #2D2D2D
-    color #444744
-    font-weight bold
-    line-height 30px
     width 100px
-    margin-left 250px
-    border-radius 8px
+    margin 5px auto 10px
+    border-radius 5px
+    padding 5px
+    color #666
+    font-size 10px
+#footer
+  font-size 11px
