--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -52,7 +52,6 @@ h2
     cursor hand
     padding 3px 10px
     width auto
-    line-height 20px
     font-size 14px
     letter-spacing 2px
     border-radius 5px
@@ -161,7 +160,8 @@ h2
     #load:hover, #auto:hover
       border-left-color #444
     textarea
-      width 98%
+      resize none
+      width 99%
       min-height 50px
       text-shadow none
   #error
