--- a/views/chat.jade
+++ b/views/chat.jade
@@ -13,7 +13,7 @@ p#error
     .user
       small Nothing here yet
 .controls
-  input#remo(type="button", value="Remove")
+  input#remo(type="button", value="Remove Chat")
 
 script
   var USER = {
