--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -145,10 +145,11 @@ h2
     margin-right auto
     input
       min-width auto
-      width 33%
       margin 0
       margin-top 3px
       margin-bottom 5px
+    #send,#load,#auto
+      width 33%
     #send
       border-radius 5px 0 0 5px
       border-right 0
