--- a/views/layout.jade
+++ b/views/layout.jade
@@ -16,4 +16,4 @@ html
     br
     #footer
       | By
-      a(href="http://sadasant.com/") Daniel R.
+      a(href="http://sadasant.com/") sadasant
