--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -130,6 +130,8 @@ h2
         pre:hover
           overflow-x scroll
         img
+          min-width 50px
+          min-height 50px
           max-width 100px
           max-height 100px
     .you
