--- a/views/layout.jade
+++ b/views/layout.jade
@@ -15,5 +15,8 @@ html
     br
     br
     #footer
+      a(href="https://github.com/sadasant/TALK/blob/master/LICENSE#L10-13") WARNING
+      br
+      br
       | By
       a(href="http://sadasant.com/") sadasant
