both external and hosted jquery

--- a/views/chat.jade
+++ b/views/chat.jade
@@ -23,5 +23,5 @@ script
     , CHAT = {
       name : "#{chat.name}"
     }
-script(src="/js/jquery-1.7.1.min.js")
+script(src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.js")
 script(src="/js/chat.js")
