flattr and fork links on the footer

--- a/views/index.jade
+++ b/views/index.jade
@@ -4,7 +4,7 @@ h1
   p
     b="TALK "
     =" is a simple "
-    a(href="https://github.com/sadasant/TALK")="FOSS"
+    a(href="https://github.com/sadasant/TALK", target="_blank")="FOSS"
     |  node.js app for creating private chats.
     br
     br
