--- a/views/layout.jade
+++ b/views/layout.jade
@@ -15,8 +15,12 @@ html
     br
     br
     #footer
-      a(href="https://github.com/sadasant/TALK/blob/master/LICENSE#L10-13") WARNING
+      a(href="https://github.com/sadasant/TALK/blob/master/LICENSE#L10-13", target="_blank") Warning!
+      | &nbsp;
+      a(href="http://flattr.com/thing/570391/TALK-is-a-simple-FOSS-node-js-app-for-creating-private-chats-", target="_blank") Flattr this!
+      | &nbsp;
+      a(href="https://github.com/sadasant/TALK", target="_blank") Fork me!
       br
       br
       | By
-      a(href="http://sadasant.com/") sadasant
+      a(href="http://sadasant.com/", target="_blank") sadasant
