no more jquery :)

--- a/views/chat.jade
+++ b/views/chat.jade
@@ -23,5 +23,6 @@ script
     , CHAT = {
       name : "#{chat.name}"
     }
-script(src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.js")
+//script(src="http://sadasant.com/js/S.js")
+script(src="/js/S.js")
 script(src="/js/chat.js")
